Fix mis-applied change in previous.  Don't increment r_oldcv twice. PR lib/53803